# UBVSR

./: .gitignore  CMakeLists.txt  CMakeSettings.json
UBVSR/: Buffer.hpp  CMakeLists.txt  FpsCounter.hpp  Framebuffer.hpp  Math.hpp  Model.hpp  Pixel.hpp  TGA.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.hpp  UBVSR.cpp  UBVSR.hpp  Vertex.hpp  Window.cpp  Window.hpp  test.tga
UBVSR/Window/: WindowWin32.cpp  WindowWin32.hpp  WindowX11.cpp  WindowX11.hpp
res/: Dust2_material_0.tga  Dust2_material_1.tga  Dust2_material_10.tga  Dust2_material_11.tga  Dust2_material_12.tga  Dust2_material_13.tga  Dust2_material_14.tga  Dust2_material_15.tga  Dust2_material_16.tga  Dust2_material_17.tga  Dust2_material_18.tga  Dust2_material_19.tga  Dust2_material_2.tga  Dust2_material_20.tga  Dust2_material_21.tga  Dust2_material_22.tga  Dust2_material_23.tga  Dust2_material_24.tga  Dust2_material_25.tga  Dust2_material_26.tga  Dust2_material_27.tga  Dust2_material_28.tga  Dust2_material_29.tga  Dust2_material_3.tga  Dust2_material_30.tga  Dust2_material_31.tga  Dust2_material_32.tga  Dust2_material_33.tga  Dust2_material_4.tga  Dust2_material_5.tga  Dust2_material_6.tga  Dust2_material_7.tga  Dust2_material_8.tga  Dust2_material_9.tga  Eye.tga  Material.010_430A12DC_c.bmp.tga  Material.011_2BF33E2A_c.bmp.tga  Material.012_4D23D68_c.bmp.tga  Skin.tga  Tounge.tga  (+15 more)
